--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,5 +25,4 @@ jobs:
         python-version: "3.10"
         
     - name: Test with pytest
-      run: pytest
-        pytest
+      run: pytest --cov
