--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+      - name: Install dependencies
+      run: pip install -U pytest 
         
     - name: Test with pytest
-      run: pytest --cov
+      run: pytest
