--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,10 @@ jobs:
       with:
         python-version: "3.10"
       - name: Install dependencies
-      run: pip install -U pytest 
+        run:|
+        pip install -U pytest 
+        pip install pytest-cov 
+        
         
     - name: Test with pytest
       run: pytest
