--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,11 +23,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-      - name: Install dependencies
-        run:|
-        pip install -U pytest 
-        pip install pytest-cov 
-        
-        
-    - name: Test with pytest
-      run: pytest
+   
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -U pytest
+          pip install pytest-cov
+
+
+    - name: Run tests
+      run: |
+        pytest --cov
+      
